# cliper

./: Makefile  README.md  XCkLG7I3HrX6cv7ySHamBQKWcCzPiMMf.icns
scripts/: e2e.sh
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  lib.rs  main.rs  state.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/tests/: crypto.rs  db_integration.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  styles.css
ui/src/components/: ItemCard.tsx
