[package]
name = "cliper"
version = "0.1.0"
edition = "2021"
description = "Clipboard history for macOS (Rust + Tauri)"
license = "MIT"

[lib]
name = "cliper_lib"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "cliper"
path = "src/main.rs"

[dependencies]
tauri = { version = "^1", features = ["global-shortcut-all", "system-tray", "macos-private-api"] }
tauri-utils = "^1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal"] }
window-vibrancy = { version = "0.4" }
arboard = "3"
rusqlite = { version = "0.29", features = ["bundled"] }
ring = "0.17"
zeroize = { version = "1.6", features = ["alloc"] }
sha2 = "0.10"
hex = "0.4"
security-framework = { version = "2.9", features = ["OSX_10_9"] }
time = { version = "0.3", features = ["formatting"] }
urlencoding = "2"
url = "2"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21"
once_cell = "1"
parking_lot = "0.12"
cocoa = "0.24"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "^1", features = [] }
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["png", "webp"] }

[dev-dependencies]
tempfile = "3"
